--- a/snowflake.html
+++ b/snowflake.html
@@ -212,7 +212,7 @@
 
       </div>
       <p class="hero-tagline">
-        DeepLearning-based Cybersecurity now on the Snowflake NativeApp marketplace
+        DeepLearning-based Cybersecurity is now available on the Snowflake NativeApp Marketplace
       </p>
     </div>
   </section>
@@ -239,7 +239,7 @@
         <i class="fas fa-piggy-bank value-prop-icon"></i>
         <div class="value-prop-title">Cost Savings</div>
         <p class="value-prop-desc">
-          Save 80% or more on ingestion and operational costs by filtering out noise before it hits your SIEM.
+          Save 80% or more by sending accurate alerts - and fewer raw logs - to your SIEM.
         </p>
       </div>
       <!-- 2) Improved Detections -->
@@ -247,7 +247,7 @@
         <i class="fas fa-shield-alt value-prop-icon"></i>
         <div class="value-prop-title">Improved Detections</div>
         <p class="value-prop-desc">
-          See attacks that rules &amp; ML systems cannot discern, thanks to advanced deep learning.
+          See attacks that rules &amp; ML systems overlook, thanks to LogLM based deep learning.
         </p>
       </div>
       <!-- 3) Simple Operations -->
@@ -255,7 +255,7 @@
         <i class="fas fa-cogs value-prop-icon"></i>
         <div class="value-prop-title">Simple Operations</div>
         <p class="value-prop-desc">
-          Scales on Snowflake and feeds indicators into your SIEM for streamlined operations.
+          Auto-scales on Snowflake and feeds indicators into your SIEM. 
         </p>
       </div>
       <!-- 4) Proven at Scale -->
@@ -263,7 +263,7 @@
         <i class="fas fa-chart-line value-prop-icon"></i>
         <div class="value-prop-title">Proven at Scale</div>
         <p class="value-prop-desc">
-          Developed with a tier one financial institution, handling massive log volumes seamlessly.
+          Developed with a tier-one financial institution, handling massive log volumes seamlessly.
         </p>
       </div>
       <!-- 5) Per Usage Economics -->
@@ -271,7 +271,7 @@
         <i class="fas fa-coins value-prop-icon"></i>
         <div class="value-prop-title">Per Usage Economics</div>
         <p class="value-prop-desc">
-          Try for free via your Snowflake account. Upgrade to unlimited plans with DeepTempo.
+          Try for free via your Snowflake account. Pay only for what you use - use your Snowflake credits.
         </p>
       </div>
     </div>
