--- a/snowflake.html
+++ b/snowflake.html
@@ -234,7 +234,7 @@
   <div class="u-center-text" style="margin-bottom: 2rem;">
     <!-- Increased font size for the heading -->
     <h2 class="heading-secondary" style="font-size: 2.2rem; margin-bottom: 1rem;">
-      Joint Value Proposition
+      Joint Value Propositions
     </h2>
   </div>
 
@@ -265,7 +265,7 @@
         Cost Savings
       </div>
       <p class="value-prop-desc" style="font-size: 1.1rem; line-height: 1.4; color: #333;">
-        Save 80% or more on ingestion and operational costs by filtering out noise before it hits your SIEM.
+        Save 80% or more by sending smart indicators to your SIEM - and fewer raw logs.
       </p>
     </div>
 
@@ -284,7 +284,7 @@
         Improved Detections
       </div>
       <p class="value-prop-desc" style="font-size: 1.1rem; line-height: 1.4; color: #333;">
-        See attacks that rules &amp; ML systems cannot discern, thanks to advanced deep learning.
+        See attacks that rules &amp; aging ML models overlook, thanks to the Tempo LogLM.
       </p>
     </div>
 
@@ -322,7 +322,7 @@
         Proven at Scale
       </div>
       <p class="value-prop-desc" style="font-size: 1.1rem; line-height: 1.4; color: #333;">
-        Developed with a tier one financial institution, handling massive log volumes seamlessly.
+        Developed with a tier-one financial institution, handling massive log volumes seamlessly.
       </p>
     </div>
 
@@ -341,7 +341,7 @@
         Per Usage Economics
       </div>
       <p class="value-prop-desc" style="font-size: 1.1rem; line-height: 1.4; color: #333;">
-        Try for free via your Snowflake account. Upgrade to unlimited plans with DeepTempo.
+        Pay only for what you use. Pay via your Snowflake credits.
       </p>
     </div>
 
@@ -394,7 +394,7 @@
     <div class="book__form">
       <div class="u-margin-bottom-medium">
         <h2 class="heading-secondary">
-          Register Now to Access a Free Trial on Snowflake
+          Share your Info - Stay in Touch
         </h2>
       </div>
       <!-- HubSpot Form Embed (Replace with your actual Portal/Form IDs) -->
