--- a/snowflake.html
+++ b/snowflake.html
@@ -375,8 +375,8 @@
         background: #fff;
       "
     >
-      <!-- Using a database icon for "Data Sovereignty" -->
-      <i class="fas fa-database" style="font-size: 3rem; margin-bottom: 1rem; color: #d60000;"></i>
+      <!-- Using a lock icon for "Data Sovereignty" -->
+      <i class="fas fa-lock" style="font-size: 3rem; margin-bottom: 1rem; color: #d60000;"></i>
       <div class="value-prop-title" style="font-size: 1.25rem; font-weight: 700; margin-bottom: 0.5rem;">
         Data Sovereignty
       </div>
@@ -385,6 +385,26 @@
       </p>
     </div>
 
+    <!-- 8) Explainable (Magnifying Glass Icon) -->
+    <div class="value-prop-card" 
+      style="
+        text-align: center; 
+        border: 1px solid #eee; 
+        border-radius: 8px; 
+        padding: 2rem; 
+        background: #fff;
+      "
+    >
+      <i class="fas fa-search" style="font-size: 3rem; margin-bottom: 1rem; color: #d60000;"></i>
+      <div class="value-prop-title" style="font-size: 1.25rem; font-weight: 700; margin-bottom: 0.5rem;">
+        Explainable
+      </div>
+      <p class="value-prop-desc" style="font-size: 1.1rem; line-height: 1.4; color: #333;">
+        Much more than a brilliant black box—Tempo includes the context you need to act.
+      </p>
+    </div>
+
+    
   </div>
 </section>
 
@@ -435,7 +455,7 @@
           <img alt="Full logo" src="img/logo-full-color.png">
         </picture>
         <p class="footer__copyright">
-          DeepTempo was built by a team of deep learning engineers...
+          DeepTempo was built by a team of deep learning engineers and enterprise system builders, many of whom have spent years in security operations teams. We believe in harnessing collective defense for cyber security via deep learning, to make the lives of security operations teams better while restoring the initiative to the defenders.
         </p>
       </div>
     </div>
