--- a/snowflake.html
+++ b/snowflake.html
@@ -212,7 +212,7 @@
 
       </div>
       <p class="hero-tagline">
-        DeepLearning-based Cybersecurity is now available on the Snowflake NativeApp Marketplace
+      Tempo, Deep-Learning for Cybersecurity Available on the Snowflake NativeApp Marketplace
       </p>
     </div>
   </section>
