--- a/snowflake.html
+++ b/snowflake.html
@@ -400,7 +400,7 @@
         Explainable
       </div>
       <p class="value-prop-desc" style="font-size: 1.1rem; line-height: 1.4; color: #333;">
-        Much more than a brilliant black box—Tempo includes the context you need to act.
+        More than a brilliant black box — Tempo provides the context you need to act.
       </p>
     </div>
 
