--- a/snowflake.html
+++ b/snowflake.html
@@ -218,14 +218,22 @@
   </section>
 
   <!-- VIDEO SECTION (no heading) -->
-  <section class="video-section">
-    <div class="video-wrapper">
-      <iframe
-        src="https://www.youtube.com/embed/meaxmFGyep4?si=RmIJuR1Mm9K2tUEQ"
-        frameborder="0"
-        allowfullscreen
-      ></iframe>
-    </div>
+<section class="video-section">
+  <div class="video-wrapper">
+    <iframe
+      src="https://www.youtube.com/embed/meaxmFGyep4?si=RmIJuR1Mm9K2tUEQ"
+      frameborder="0"
+      allowfullscreen
+    ></iframe>
+  </div>
+  <!-- Short explanation or caption -->
+  <p class="video-description">
+    Watch Cameron Wasilewsky, Snowflake Senior S/E, demonstrate Tempo’s incident identification, highlighting 
+    seamless integration with Snowflake.
+  </p>
+</section>
+
+    
   </section>
 
   <!-- VALUE PROPOSITION -->
