--- a/snowflake.html
+++ b/snowflake.html
@@ -106,6 +106,17 @@
       top: 0;
     }
 
+    /* New paragraph styling */
+    .video-description {
+      font-size: 1.1rem; 
+      line-height: 1.4; 
+      margin-top: 1.5rem; /* Add a little space above */
+      color: #333;
+      max-width: 960px; /* match the width of the video wrapper */
+      margin-left: auto;
+      margin-right: auto;
+    }  
+    
     /* VALUE PROP SECTION */
     .value-prop-section {
       padding: 4rem 2rem;
