--- a/product.html
+++ b/product.html
@@ -113,7 +113,7 @@
         </section>
         
         <section class="cta-section">
-            <a href="https://app.snowflake.com/marketplace/listing/GZTYZOYXHNX/deeptempo-cybersecurity-tempo-cybersecurity-incident-identification-via-deep-learning" target="_blank" class="cta-button">Try Now on Snowflake Marketplace</a>
+            <a href="https://app.snowflake.com/marketplace/listing/GZTYZOYXHP3/deeptempo-cybersecurity-tempo?search=deep%20tempo" target="_blank" class="cta-button">Try Now on Snowflake Marketplace</a>
         </section>
         
         <footer class="footer">
