--- a/snowflake.html
+++ b/snowflake.html
@@ -108,7 +108,7 @@
 
     /* New paragraph styling */
     .video-description {
-      font-size: 1.1rem; 
+      font-size: 1.9rem; 
       line-height: 1.4; 
       margin-top: 1.5rem; /* Add a little space above */
       color: #333;
@@ -426,7 +426,14 @@
     
   </div>
 </section>
-
+  
+  <section class="cta-section">
+    <a href="https://app.snowflake.com/marketplace/listing/GZTYZOYXHP3/deeptempo-cybersecurity-tempo?search=deep%20tempo" 
+     target="_blank"
+     class="cta-button">
+    Try Now on Snowflake Marketplace
+    </a>
+  </section>
 
   <!-- HUBSPOT FORM SECTION -->
   <section class="section-book">
