--- a/snowflake.html
+++ b/snowflake.html
@@ -431,7 +431,7 @@
     <a href="https://app.snowflake.com/marketplace/listing/GZTYZOYXHP3/deeptempo-cybersecurity-tempo?search=deep%20tempo" 
      target="_blank"
      class="cta-button">
-    Try Now on Snowflake Marketplace
+    Visit Tempo on the Snowflake Marketplace
     </a>
   </section>
 
