--- a/snowflake.html
+++ b/snowflake.html
@@ -223,7 +223,7 @@
 
       </div>
       <p class="hero-tagline">
-      Tempo, Deep-Learning for Cybersecurity Available on the Snowflake NativeApp Marketplace
+      Tempo, Deep Learning for Cybersecurity Available on the Snowflake NativeApp Marketplace
       </p>
     </div>
   </section>
