--- a/defense_in_depth_4.html
+++ b/defense_in_depth_4.html
@@ -305,6 +305,10 @@
         // Start attack animations after the "It is almost inevitable..." text appears
         setTimeout(() => setInterval(startAttacks, 3000), 7000);
     </script>
+    <!-- Start of HubSpot Embed Code -->
+    <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/48299015.js"></script>
+    <!-- End of HubSpot Embed Code -->
+    
 </body>
 
 </html>
