Update snowflake.html hubspot

--- a/snowflake.html
+++ b/snowflake.html
@@ -501,6 +501,9 @@
       navbarNav.classList.remove('active');
     });
   </script>
+  <!-- Start of HubSpot Embed Code -->
+  <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/48299015.js"></script>
+  <!-- End of HubSpot Embed Code -->
 </body>
 </html>
 
