--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                     <li class="navbar__item"><a href="index.html" class="navbar__link active">Home</a></li>
                     <li class="navbar__item"><a href="product.html" class="navbar__link">Product</a></li>
                     <li class="navbar__item"><a href="about-us.html" class="navbar__link">About Us</a></li>
+                    <li class="navbar__item"><a href="snowflake.html" class="navbar__link">Snowflake</a></li>
                     <li class="navbar__item"><a href="https://medium.com/deeptempo" target="_blank" class="navbar__link">Blog</a></li>
                     <li class="navbar__item"><a href="http://docs.deeptempo.ai/" target="_blank" class="navbar__link">Documentation</a></li>
                     <li class="navbar__item"><a href="contact-us.html" class="navbar__link">Contact Us</a></li>
