--- a/LogLM_ML.html
+++ b/LogLM_ML.html
@@ -150,7 +150,7 @@
         <div class="hero-section-content">
             <h1 class="hero-title">LogLM vs. ML</h1>
             <p class="hero-subtitle">
-                Comparing Deep Learning-Powered Tempo LogLM with Traditional ML/UEBA Solutions
+                Comparing the Deep-Learning based Tempo LogLM with Traditional ML/UEBA Solutions
             </p>
         </div>
     </section>
@@ -159,11 +159,12 @@
     <section class="section-content">
         <h2 class="heading-secondary">Introduction</h2>
         <p>
-            Traditional machine learning approaches in cybersecurity often rely on static,
-            rule-based methods that lack the agility to adapt to rapidly evolving threats.
-            In contrast, DeepTempo’s Tempo LogLM leverages a transformer-based deep learning model,
-            pretrained on extensive log data, to deliver superior accuracy, rapid adaptability,
-            and transparent, explainable insights.
+            Traditional machine learning approaches in cybersecurity lack the agility to adapt to rapidly evolving threats.
+            ML based cybersecurity systems tie together a mix of models, and humans are required to select features within the models and then to select the models themselves.
+            As a result, traditional approaches take a long time to deliver value and are brittle, unable to quickly adapt to changes in your environment.  
+            In contrast, DeepTempo’s Tempo LogLM is a Foundation Model.
+            Tempo was pretrained on extensive log data, to deliver superior accuracy, rapid adaptability, and transparent, explainable insights. 
+            Tempo can adapt via minimal fine tuning - and may work with zero shot learning immediately at greater accuracy than traditional, hand tuned, mixtures of ML models.  
         </p>
     </section>
 
