--- a/LogLM_ML.html
+++ b/LogLM_ML.html
@@ -206,7 +206,8 @@
 
     <!-- UEBA Comparison Table Section -->
     <section class="section-content">
-      <h2 class="heading-secondary">UEBA Comparison</h2>
+
+      <h2 class="heading-secondary" style="text-align: center;">UEBA Comparison</h2>
       <p>
         The table below compares Tempo LogLM against leading UEBA solutions across key attributes such as Accuracy, Adaptability, Extensibility, Scalability, Explainability, Ease of Deployment, Operations Cost, and Visibility.
       </p>
