--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
                 <div class="row">
                     <div class="col-1-of-2">
-                        <p class="paragraph">As deep learning technologies advance, we teach them to speak security. As a result, enterprises are safer and security teams are more productive now and in the future.
+                        <p class="paragraph">DeepTempo builds LogLMs, Foundation Models uniquely able to rapidly adapt to new environments while retaining extraordinary accuracy. The LogLMs are used to better identify potential attacks."
                         </p>
                         <p class="paragraph">DeepTempo returns power to defenders; we keep defenders ahead of attackers by increasing the productivity of cyber defense while saving costs by applying our LogLM (Large Log Model) based solutions.</p>
                         <p class="paragraph">Deep learning is more than cutting-edge technology. Foundation models, like Tempo LogLM, can apply what they learn in one environment to each new environment they encounter. They are collective intelligence - at work in defense of us all.</p>
