--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         <h2 class="heading-secondary">
                             Mission
                         </h2>
-                        <p class="highlighted">DeepTempo returns the power to defenders with a new LogLM (Log Language Model), that, along with our software, identifies security incidents with unparalleled accuracy and efficiency.</p>
+                        <p class="highlighted">DeepTempo delivers Collective Defense via Deep Learning.  We return the power to defenders with LogLMs and software.  We take open approaches, running on any data lake, and reducing lock-in from aging vertically integrated security platforms.</p>
                     </div>
                 </div>
             </section>
