--- a/product.html
+++ b/product.html
@@ -46,9 +46,10 @@
                 <ul class="navbar__list">
                     <li class="navbar__item"><a href="index.html" class="navbar__link">Home</a></li>
                     <li class="navbar__item"><a href="product.html" class="navbar__link active">Product</a></li>
-                    <li class="navbar__item"><a href="about-us.html" class="navbar__link">About Us</a></li>
+                    <li class="navbar__item"><a href=".html" class="navbar__link">About Us</a></li>
                     <li class="navbar__item"><a href="https://medium.com/deeptempo" target="_blank" class="navbar__link">Blog</a></li>
                     <li class="navbar__item"><a href="http://docs.deeptempo.ai/" target="_blank" class="navbar__link">Documentation</a></li>
+                    <li class="navbar__item"><a href="about-us.html" class="navbar__link">About Us</a></li>
                     <li class="navbar__item"><a href="contact-us.html" class="navbar__link">Contact Us</a></li>
                 </ul>
                 <div class="navbar__close" id="close-menu">&times;</div>
