--- a/product.html
+++ b/product.html
@@ -46,7 +46,7 @@
                 <ul class="navbar__list">
                     <li class="navbar__item"><a href="index.html" class="navbar__link">Home</a></li>
                     <li class="navbar__item"><a href="product.html" class="navbar__link active">Product</a></li>
-                    <li class="navbar__item"><a href=".html" class="navbar__link">About Us</a></li>
+                    <li class="navbar__item"><a href="LogLM_ML.html" class="navbar__link">vs ML/UEBA</a></li>
                     <li class="navbar__item"><a href="https://medium.com/deeptempo" target="_blank" class="navbar__link">Blog</a></li>
                     <li class="navbar__item"><a href="http://docs.deeptempo.ai/" target="_blank" class="navbar__link">Documentation</a></li>
                     <li class="navbar__item"><a href="about-us.html" class="navbar__link">About Us</a></li>
