--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                     <div class="footer__certifications">
                         <img src="img/native-app-accelerator-badge.png" alt="Native App Accelerator Badge" class="footer-cert-logo">
                         <img src="img/nvidia-inception-program-badge.png" alt="Nvidia Inception Program Badge" class="footer-cert-logo">
-                        <!-- <img src="img/BNY_Ascent.png" alt="BNY_Ascent Badge" class="footer-cert-logo"> -->
+                        <img src="img/BNY_Ascent.png" alt="BNY_Ascent Badge" class="footer-cert-logo">
                     </div>
                 </div>
                 <div class="col-1-of-2">
