--- a/about-us.html
+++ b/about-us.html
@@ -163,6 +163,11 @@
             <h2>DeepTempo News</h2>
             <div class="news-cards">
                 <div class="news-card">
+                    <a href="https://www.businesswire.com/news/home/20250212405112/en/DeepTempo-Completes-BNY-Ascent-Program-to-Advance-AI-Driven-Cybersecurity-Innovation" target="_blank" class="news-title">DeepTempo partners with BNY for Deep Learning based Cybersecurity</a>
+                    <p class="news-date">2025-2-12</p>
+                    <p class="news-source">Business Wire</p>
+                </div>
+                <div class="news-card">
                     <a href="https://www.darkreading.com/cybersecurity-operations/untitled" target="_blank" class="news-title">DeepTempo unveils AI-powered app for detecting security incidents</a>
                     <p class="news-date">2024-11-19</p>
                     <p class="news-source">Dark Reading</p>
