--- a/about-us.html
+++ b/about-us.html
@@ -154,6 +154,14 @@
                         <p>Levi's, PG&E, Kaiser ++</p>
                     </a>
                 </div>
+                <div class="advisor-card">
+                    <a href="https://www.linkedin.com/in/brennanlodge/" target="_blank" class="linkedin-icon">
+                        <img src="img/brennan-lodge.jpg" alt="Brennan Lodge">
+                        <h3><i class="fab fa-linkedin"></i>Brennan Lodge</h3>
+                        <p>Manhattan Institute, HSBC, Goldman ++</p>
+                    </a>
+                </div>
+
             </div>
         </section>
 
