--- a/about-us.html
+++ b/about-us.html
@@ -163,7 +163,7 @@
                 </div>
                 <div class="advisor-card">
                     <a href="https://www.linkedin.com/in/gunterollmann/" target="_blank" class="linkedin-icon">
-                        <img src="img/gunter-ollmann.jpg" alt="Gunter Ollmann">
+                        <img src="img/Gunter-Ollmann.jpg" alt="Gunter Ollmann">
                         <h3><i class="fab fa-linkedin"></i>Gunter Ollmann</h3>
                         <p>Cobalt, Vectra, Devo, Microsoft ++</p>
                     </a>
