--- a/product.html
+++ b/product.html
@@ -117,11 +117,11 @@
 <section class="features-section" style="margin-top: 3rem;">
     <div class="features-container">
         <div class="u-center-text">
-            <h2 class="heading-secondary">Our NVIDIA-Powered Pipeline</h2>
+            <h2 class="heading-secondary">Powered by NVIDIA</h2>
         </div>
         <p class="paragraph u-center-text">
             From enterprise log ingestion to large-scale pretraining and real-time inference,
-            our Tempo LogLM harnesses the entire NVIDIA software stack to deliver unparalleled
+            our Tempo LogLM harnesses the NVIDIA software stack to deliver unparalleled
             performance on security data—whether on-premise or in the cloud.
         </p>
         
@@ -143,7 +143,7 @@
 
             <!-- ARROW 1 -->
             <div class="feature-card arrow-step" style="border: none; box-shadow: none;">
-                <i class="fas fa-arrow-right" style="font-size: 2rem; margin: 1rem;"></i>
+                <i class="fas fa-arrow-right" style="font-size: 2rem; margin: .5rem;"></i>
             </div>
 
             <!-- STEP 2: Pretraining -->
@@ -153,7 +153,7 @@
                 </div>
                 <h3 class="feature-title">Pretraining</h3>
                 <p class="feature-description">
-                    Utilizing <strong>NVIDIA HPC clusters</strong> (DGX servers or GPU-enabled data centers)
+                    Utilizing <strong>NVIDIA clusters</strong> (DGX servers or GPU-enabled data centers)
                     and containers from <strong>NVIDIA NGC</strong>, we harness <strong>CUDA</strong>
                     and <strong>cuDNN</strong> to pretrain Tempo LogLM on vast corpora of security logs—ensuring
                     a robust foundation for threat detection.
@@ -162,7 +162,7 @@
 
             <!-- ARROW 2 -->
             <div class="feature-card arrow-step" style="border: none; box-shadow: none;">
-                <i class="fas fa-arrow-right" style="font-size: 2rem; margin: 1rem;"></i>
+                <i class="fas fa-arrow-right" style="font-size: 2rem; margin: .5rem;"></i>
             </div>
 
             <!-- STEP 3: Fine Tuning -->
@@ -180,7 +180,7 @@
 
             <!-- ARROW 3 -->
             <div class="feature-card arrow-step" style="border: none; box-shadow: none;">
-                <i class="fas fa-arrow-right" style="font-size: 2rem; margin: 1rem;"></i>
+                <i class="fas fa-arrow-right" style="font-size: 2rem; margin: .5rem;"></i>
             </div>
 
             <!-- STEP 4: Inference -->
