--- a/contact-us.html
+++ b/contact-us.html
@@ -65,29 +65,8 @@
                 <p><i class="fas fa-phone"></i> +1 (650) 241-8480</p>
                 <p><i class="fas fa-envelope"></i> info@deeptempo.ai</p>
             </div>
-            <div class="contact-form">
-                <h2>Send Us a Message</h2>
-                <form action="https://formspree.io/f/xvgorvbl" method="POST">
-                    <div class="form-group">
-                        <input type="text" name="name" placeholder="Your Name" required>
-                    </div>
-                    <div class="form-group">
-                        <input type="email" name="email" placeholder="Your Email" required>
-                    </div>
-                    <div class="form-group">
-                        <select name="subject">
-                            <option value="general">General Inquiry</option>
-                            <option value="sales">Sales</option>
-                            <option value="support">Support</option>
-                            <option value="partnership">Partnerships</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <textarea name="message" rows="5" placeholder="Your Message"></textarea>
-                    </div>
-                    <button type="submit" class="submit-button">Send Message</button>
-                </form>
-            </div>
+            <script src="https://js.hsforms.net/forms/embed/48299015.js" defer></script>
+            <div class="hs-form-frame" data-region="na1" data-form-id="315a4ab2-1c50-404e-9cd3-0eaf83114240" data-portal-id="48299015"></div>
         </section>
         
         <section class="job-listing-section">
