--- a/contact-us.html
+++ b/contact-us.html
@@ -65,8 +65,11 @@
                 <p><i class="fas fa-phone"></i> +1 (650) 241-8480</p>
                 <p><i class="fas fa-envelope"></i> info@deeptempo.ai</p>
             </div>
-            <script src="https://js.hsforms.net/forms/embed/48299015.js" defer></script>
-            <div class="hs-form-frame" data-region="na1" data-form-id="315a4ab2-1c50-404e-9cd3-0eaf83114240" data-portal-id="48299015"></div>
+            <div class="contact-form">
+                <h2>Send Us a Message</h2>
+                <script src="https://js.hsforms.net/forms/embed/48299015.js" defer></script>
+                <div class="hs-form-frame" data-region="na1" data-form-id="315a4ab2-1c50-404e-9cd3-0eaf83114240" data-portal-id="48299015"></div>
+            </div>
         </section>
         
         <section class="job-listing-section">
