--- a/index.html
+++ b/index.html
@@ -159,20 +159,8 @@
                 <div class="row">
                     <div class="book">
                         <div class="book__form">
-                            <form action="https://formspree.io/f/xvgorvbl" method="POST" class="form">
-                                <div class="u-margin-bottom-medium">
-                                    <h2 class="heading-secondary">
-                                        Stay Updated
-                                    </h2>
-                                </div>
-                                <div class="form__group">
-                                    <input type="email" class="form__input" placeholder="Email address" id="email" name="email" required>
-                                    <label for="email" class="form__label">Email address</label>
-                                </div>
-                                <div class="form__group">
-                                    <button type="submit" class="btn btn--outline-white">Submit</button>
-                                </div>
-                            </form>
+                            <script src="https://js.hsforms.net/forms/embed/48299015.js" defer></script>
+                            <div class="hs-form-frame" data-region="na1" data-form-id="315a4ab2-1c50-404e-9cd3-0eaf83114240" data-portal-id="48299015"></div>
                         </div>
                     </div>
                 </div>
