--- a/index.html
+++ b/index.html
@@ -72,21 +72,6 @@
         </header>
 
         <main>
-            <!-- Start of HubSpot code snippet -->
-            <button type="button" id="hs_show_banner_button"
-            style="background-color: #425b76; border: 1px solid #425b76;
-                   border-radius: 3px; padding: 10px 16px; text-decoration: none; color: #fff;
-                   font-family: inherit; font-size: inherit; font-weight: normal; line-height: inherit;
-                   text-align: left; text-shadow: none;"
-            onClick="(function(){
-              var _hsp = window._hsp = window._hsp || [];
-              _hsp.push(['showBanner']);
-            })()"
-            >
-            Cookie Settings
-            </button>
-            
-            <!-- End of HubSpot code snippet -->
             <section class="section-about">
                 <div class="u-center-text u-margin-bottom-big">
                     <h2 class="heading-secondary">
@@ -230,6 +215,21 @@
         </script>
         <!-- Start of HubSpot Embed Code -->
         <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/48299015.js"></script>
-        <!-- End of HubSpot Embed Code -->
+        <!--         End of HubSpot Embed Code -->
+                    <!-- Start of HubSpot code snippet -->
+<!--             <button type="button" id="hs_show_banner_button"
+            style="background-color: #425b76; border: 1px solid #425b76;
+                   border-radius: 3px; padding: 10px 16px; text-decoration: none; color: #fff;
+                   font-family: inherit; font-size: inherit; font-weight: normal; line-height: inherit;
+                   text-align: left; text-shadow: none;"
+            onClick="(function(){
+              var _hsp = window._hsp = window._hsp || [];
+              _hsp.push(['showBanner']);
+            })()"
+            >
+            Cookie Settings
+            </button> -->
+            
+            <!-- End of HubSpot code snippet -->
     </body>
 </html>
