--- a/product.html
+++ b/product.html
@@ -114,6 +114,8 @@
         </section>
 
         <!-- ==================== NVIDIA-Powered Pipeline Section ==================== -->
+
+<section id="nvidia-deeptempo">        
 <section class="features-section" style="margin-top: 3rem;">
     <div class="features-container">
         <div class="u-center-text">
